fixer une partie de contact version mobile

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ a:hover {
     left: 5vw;
  }
   .contact {
-    width: 35vw;
+    width: 100%;
     top: 375px;
  }
   .description {
